catkin_ws/logs/frontend/build.make.143.log.stderr
In file included from /usr/include/c++/4.8/backward/strstream:51:0,
                 from /usr/include/vtk-5.8/vtkIOStream.h:112,
                 from /usr/include/vtk-5.8/vtkSystemIncludes.h:40,
                 from /usr/include/vtk-5.8/vtkIndent.h:24,
                 from /usr/include/vtk-5.8/vtkObjectBase.h:43,
                 from /usr/include/vtk-5.8/vtkSmartPointerBase.h:26,
                 from /usr/include/vtk-5.8/vtkSmartPointer.h:23,
                 from /usr/include/pcl-1.7/pcl/visualization/point_cloud_geometry_handlers.h:48,
                 from /usr/include/pcl-1.7/pcl/visualization/point_cloud_handlers.h:41,
                 from /usr/include/pcl-1.7/pcl/visualization/common/actor_map.h:40,
                 from /usr/include/pcl-1.7/pcl/visualization/pcl_visualizer.h:48,
                 from /usr/include/pcl-1.7/pcl/visualization/cloud_viewer.h:39,
                 from /home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/frontend/include/PointCloudMap.h:10,
                 from /home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/frontend/src/main.cpp:20:
/usr/include/c++/4.8/backward/backward_warning.h:32:2: warning: #warning This file includes at least one deprecated or antiquated header which may be removed without further notice at a future date. Please use a non-deprecated interface with equivalent functionality instead. For a listing of replacement headers and interfaces, consult the file backward_warning.h. To disable this warning use -Wno-deprecated. [-Wcpp]
 #warning \
  ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/frontend/src/main.cpp: In function ‘int main(int, char**)’:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/frontend/src/main.cpp:295:41: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
    if (slam.getImuCompensateCounter()== badFrameCnt)
                                         ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/frontend/src/main.cpp:326:48: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
     for (int i = 0; i<slam.getKeyFrames().size();i++)
                                                ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/frontend/src/main.cpp:364:92: error: no matching function for call to ‘Backend::setNewNode(Eigen::internal::cast_return_type<Eigen::Transform<double, 3, 1>, Eigen::Transform<float, 3, 1> >::type)’
  backend.setNewNode(graph.getPositionOfId(slam.getKeyFrames().back().getId()).cast<float>());
                                                                                            ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/frontend/src/main.cpp:364:92: note: candidate is:
In file included from /home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/frontend/src/main.cpp:26:0:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/frontend/include/Backend.h:28:7: note: void Backend::setNewNode(const SLAM::Frame&)
  void setNewNode(const Frame& frame); // avoid reoptimization in backend.
       ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/frontend/include/Backend.h:28:7: note:   no known conversion for argument 1 from ‘Eigen::internal::cast_return_type<Eigen::Transform<double, 3, 1>, Eigen::Transform<float, 3, 1> >::type {aka Eigen::Transform<float, 3, 1>}’ to ‘const SLAM::Frame&’
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/frontend/src/main.cpp:366:45: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
  {
                                             ^
make[2]: *** [CMakeFiles/frontend.dir/src/main.cpp.o] Error 1
make[1]: *** [CMakeFiles/frontend.dir/all] Error 2
make: *** [all] Error 2
